// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSideNav is rendered 1`] = `
<nav
  aria-label="aria-label"
  class="euiSideNav testClass1 testClass2"
  data-test-subj="test subject string"
>
  <button
    class="euiSideNav__mobileToggle euiLink"
    type="button"
  >
    <span
      class="euiSideNav__mobileWrap"
    >
      <span
        class="euiSideNav__mobileTitle"
      />
      <svg
        aria-hidden="true"
        class="euiIcon euiSideNav__mobileIcon euiIcon--medium"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xlink="http://www.w3.org/1999/xlink"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <path
            d="M2 4V2h2v2H2zm5 0V2h2v2H7zm5 0V2h2v2h-2zM2 9V7h2v2H2zm5 0V7h2v2H7zm5 0V7h2v2h-2zM2 14v-2h2v2H2zm5 0v-2h2v2H7zm5 0v-2h2v2h-2z"
            id="apps-a"
          />
        </defs>
        <use
          href="#apps-a"
        />
      </svg>
    </span>
  </button>
  <div
    class="euiSideNav__content"
  />
</nav>
`;

exports[`EuiSideNav isOpenOnMobile defaults to false 1`] = `
<nav
  class="euiSideNav"
>
  <button
    class="euiSideNav__mobileToggle euiLink"
    type="button"
  >
    <span
      class="euiSideNav__mobileWrap"
    >
      <span
        class="euiSideNav__mobileTitle"
      />
      <svg
        aria-hidden="true"
        class="euiIcon euiSideNav__mobileIcon euiIcon--medium"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xlink="http://www.w3.org/1999/xlink"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <path
            d="M2 4V2h2v2H2zm5 0V2h2v2H7zm5 0V2h2v2h-2zM2 9V7h2v2H2zm5 0V7h2v2H7zm5 0V7h2v2h-2zM2 14v-2h2v2H2zm5 0v-2h2v2H7zm5 0v-2h2v2h-2z"
            id="apps-a"
          />
        </defs>
        <use
          href="#apps-a"
        />
      </svg>
    </span>
  </button>
  <div
    class="euiSideNav__content"
  />
</nav>
`;

exports[`EuiSideNav isOpenOnMobile is rendered when specified as true 1`] = `
<nav
  class="euiSideNav euiSideNav-isOpenMobile"
>
  <button
    class="euiSideNav__mobileToggle euiLink"
    type="button"
  >
    <span
      class="euiSideNav__mobileWrap"
    >
      <span
        class="euiSideNav__mobileTitle"
      />
      <svg
        aria-hidden="true"
        class="euiIcon euiSideNav__mobileIcon euiIcon--medium"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xlink="http://www.w3.org/1999/xlink"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <path
            d="M2 4V2h2v2H2zm5 0V2h2v2H7zm5 0V2h2v2h-2zM2 9V7h2v2H2zm5 0V7h2v2H7zm5 0V7h2v2h-2zM2 14v-2h2v2H2zm5 0v-2h2v2H7zm5 0v-2h2v2h-2z"
            id="apps-a"
          />
        </defs>
        <use
          href="#apps-a"
        />
      </svg>
    </span>
  </button>
  <div
    class="euiSideNav__content"
  />
</nav>
`;

exports[`EuiSideNav items is rendered 1`] = `
<nav
  class="euiSideNav"
>
  <button
    class="euiSideNav__mobileToggle euiLink"
    type="button"
  >
    <span
      class="euiSideNav__mobileWrap"
    >
      <span
        class="euiSideNav__mobileTitle"
      />
      <svg
        aria-hidden="true"
        class="euiIcon euiSideNav__mobileIcon euiIcon--medium"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xlink="http://www.w3.org/1999/xlink"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <path
            d="M2 4V2h2v2H2zm5 0V2h2v2H7zm5 0V2h2v2h-2zM2 9V7h2v2H2zm5 0V7h2v2H7zm5 0V7h2v2h-2zM2 14v-2h2v2H2zm5 0v-2h2v2H7zm5 0v-2h2v2h-2z"
            id="apps-a"
          />
        </defs>
        <use
          href="#apps-a"
        />
      </svg>
    </span>
  </button>
  <div
    class="euiSideNav__content"
  >
    <div
      class="euiSideNavItem euiSideNavItem--root"
    >
      <button
        class="euiSideNavItemButton"
      >
        <span
          class="euiSideNavItemButton__content"
        >
          <span
            class="euiSideNavItemButton__label"
          >
            A
          </span>
        </span>
      </button>
      <div
        class="euiSideNavItem__items"
      >
        <div
          class="euiSideNavItem euiSideNavItem--trunk"
        >
          <button
            class="euiSideNavItemButton"
          >
            <span
              class="euiSideNavItemButton__content"
            >
              <span
                class="euiSideNavItemButton__label"
              >
                B
              </span>
            </span>
          </button>
        </div>
        <div
          class="euiSideNavItem euiSideNavItem--trunk"
        >
          <button
            class="euiSideNavItemButton"
          >
            <span
              class="euiSideNavItemButton__content"
            >
              <span
                class="euiSideNavItemButton__label"
              >
                C
              </span>
              <svg
                class="euiIcon euiIcon--small euiIcon--subdued"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xlink="http://www.w3.org/1999/xlink"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs>
                  <path
                    d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                    id="arrow_down-a"
                  />
                </defs>
                <use
                  fill-rule="nonzero"
                  href="#arrow_down-a"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`EuiSideNav items renders items using a specified callback 1`] = `
<nav
  class="euiSideNav"
>
  <button
    class="euiSideNav__mobileToggle euiLink"
    type="button"
  >
    <span
      class="euiSideNav__mobileWrap"
    >
      <span
        class="euiSideNav__mobileTitle"
      />
      <svg
        aria-hidden="true"
        class="euiIcon euiSideNav__mobileIcon euiIcon--medium"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xlink="http://www.w3.org/1999/xlink"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <path
            d="M2 4V2h2v2H2zm5 0V2h2v2H7zm5 0V2h2v2h-2zM2 9V7h2v2H2zm5 0V7h2v2H7zm5 0V7h2v2h-2zM2 14v-2h2v2H2zm5 0v-2h2v2H7zm5 0v-2h2v2h-2z"
            id="apps-a"
          />
        </defs>
        <use
          href="#apps-a"
        />
      </svg>
    </span>
  </button>
  <div
    class="euiSideNav__content"
  >
    <div
      class="euiSideNavItem euiSideNavItem--root"
    >
      <a
        class="euiSideNavItemButton"
        data-test-id="my-custom-element"
        href="http://www.elastic.co"
      >
        <span
          class="euiSideNavItemButton__content"
        >
          <span
            class="euiSideNavItemButton__label"
          >
            A
          </span>
        </span>
      </a>
      <div
        class="euiSideNavItem__items"
      >
        <div
          class="euiSideNavItem euiSideNavItem--trunk"
        >
          <a
            class="euiSideNavItemButton"
            data-test-id="my-custom-element"
          >
            <span
              class="euiSideNavItemButton__content"
            >
              <span
                class="euiSideNavItemButton__label"
              >
                B
              </span>
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`EuiSideNav items renders items which are links 1`] = `
<nav
  class="euiSideNav"
>
  <button
    class="euiSideNav__mobileToggle euiLink"
    type="button"
  >
    <span
      class="euiSideNav__mobileWrap"
    >
      <span
        class="euiSideNav__mobileTitle"
      />
      <svg
        aria-hidden="true"
        class="euiIcon euiSideNav__mobileIcon euiIcon--medium"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xlink="http://www.w3.org/1999/xlink"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <path
            d="M2 4V2h2v2H2zm5 0V2h2v2H7zm5 0V2h2v2h-2zM2 9V7h2v2H2zm5 0V7h2v2H7zm5 0V7h2v2h-2zM2 14v-2h2v2H2zm5 0v-2h2v2H7zm5 0v-2h2v2h-2z"
            id="apps-a"
          />
        </defs>
        <use
          href="#apps-a"
        />
      </svg>
    </span>
  </button>
  <div
    class="euiSideNav__content"
  >
    <div
      class="euiSideNavItem euiSideNavItem--root"
    >
      <a
        class="euiSideNavItemButton"
        href="http://www.elastic.co"
      >
        <span
          class="euiSideNavItemButton__content"
        >
          <span
            class="euiSideNavItemButton__label"
          >
            A
          </span>
        </span>
      </a>
      <div
        class="euiSideNavItem__items"
      >
        <div
          class="euiSideNavItem euiSideNavItem--trunk"
        >
          <button
            class="euiSideNavItemButton"
          >
            <span
              class="euiSideNavItemButton__content"
            >
              <span
                class="euiSideNavItemButton__label"
              >
                B
              </span>
            </span>
          </button>
        </div>
        <div
          class="euiSideNavItem euiSideNavItem--trunk"
        >
          <button
            class="euiSideNavItemButton"
          >
            <span
              class="euiSideNavItemButton__content"
            >
              <span
                class="euiSideNavItemButton__label"
              >
                C
              </span>
              <svg
                class="euiIcon euiIcon--small euiIcon--subdued"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xlink="http://www.w3.org/1999/xlink"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs>
                  <path
                    d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                    id="arrow_down-a"
                  />
                </defs>
                <use
                  fill-rule="nonzero"
                  href="#arrow_down-a"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`EuiSideNav items renders selected item and automatically opens parent items 1`] = `
<nav
  class="euiSideNav"
>
  <button
    class="euiSideNav__mobileToggle euiLink"
    type="button"
  >
    <span
      class="euiSideNav__mobileWrap"
    >
      <span
        class="euiSideNav__mobileTitle"
      />
      <svg
        aria-hidden="true"
        class="euiIcon euiSideNav__mobileIcon euiIcon--medium"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xlink="http://www.w3.org/1999/xlink"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <path
            d="M2 4V2h2v2H2zm5 0V2h2v2H7zm5 0V2h2v2h-2zM2 9V7h2v2H2zm5 0V7h2v2H7zm5 0V7h2v2h-2zM2 14v-2h2v2H2zm5 0v-2h2v2H7zm5 0v-2h2v2h-2z"
            id="apps-a"
          />
        </defs>
        <use
          href="#apps-a"
        />
      </svg>
    </span>
  </button>
  <div
    class="euiSideNav__content"
  >
    <div
      class="euiSideNavItem euiSideNavItem--root"
    >
      <button
        class="euiSideNavItemButton"
      >
        <span
          class="euiSideNavItemButton__content"
        >
          <span
            class="euiSideNavItemButton__label"
          >
            A
          </span>
        </span>
      </button>
      <div
        class="euiSideNavItem__items"
      >
        <div
          class="euiSideNavItem euiSideNavItem--trunk"
        >
          <button
            class="euiSideNavItemButton"
          >
            <span
              class="euiSideNavItemButton__content"
            >
              <span
                class="euiSideNavItemButton__label"
              >
                B
              </span>
            </span>
          </button>
        </div>
        <div
          class="euiSideNavItem euiSideNavItem--trunk"
        >
          <button
            class="euiSideNavItemButton euiSideNavItemButton-isOpen"
          >
            <span
              class="euiSideNavItemButton__content"
            >
              <span
                class="euiSideNavItemButton__label"
              >
                C
              </span>
            </span>
          </button>
          <div
            class="euiSideNavItem__items"
          >
            <div
              class="euiSideNavItem euiSideNavItem--branch"
            >
              <button
                class="euiSideNavItemButton euiSideNavItemButton-isSelected"
              >
                <span
                  class="euiSideNavItemButton__content"
                >
                  <span
                    class="euiSideNavItemButton__label"
                  >
                    D
                  </span>
                </span>
              </button>
              <div
                class="euiSideNavItem__items"
              />
            </div>
            <div
              class="euiSideNavItem euiSideNavItem--branch"
            >
              <button
                class="euiSideNavItemButton"
              >
                <span
                  class="euiSideNavItemButton__content"
                >
                  <span
                    class="euiSideNavItemButton__label"
                  >
                    E
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</nav>
`;
